# b-cad

./: .a-check.yml  .clang-tidy  .d-check.yml  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  a-check.mk  d-check.mk
.claude/: settings.json
.claude/commands/: implement-slice.md
.claude/hooks/: pretooluse-command-guard.sh  stop-require-gates.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/: glossar.md
docs/reviews/: 2026-06-12-slice-011-plan.md  2026-06-12-slice-011b-plan-w2.md  2026-06-12-slice-012-plan.md  2026-06-13-slice-013a-plan.md  2026-06-13-slice-013b-code-review.md  2026-06-13-slice-013b-plan.md  2026-06-13-slice-013c-plan.md  2026-06-13-slice-014a-plan.md  2026-06-13-slice-014b-code-review.md  2026-06-13-slice-014b-plan.md  2026-06-13-slice-014c-plan.md  2026-06-13-slice-015a-plan.md  2026-06-13-slice-015b-code-review.md  2026-06-13-slice-015b-plan.md  2026-06-14-slice-015c-code-review.md  2026-06-14-slice-015c-plan.md  2026-06-14-slice-016a-plan.md  2026-06-14-slice-016b-code-review.md  2026-06-14-slice-016b-plan.md  2026-06-14-slice-016c-plan.md  2026-06-14-slice-017a-plan.md  2026-06-14-slice-017b-plan.md  2026-06-14-slice-018-plan.md  2026-06-15-slice-018b-code-review.md  2026-06-15-slice-018b-plan.md  2026-06-15-slice-018c-plan.md  2026-06-16-adr-0013-text-review.md  2026-06-16-slice-017c-plan.md  (+69 more)
harness/: README.md  conventions.md  toolchain-versions.txt
plugins/: CMakeLists.txt
plugins/example/: example_plugin.cpp
plugins/testing/: abi_mismatch_plugin.cpp  no_symbols_plugin.cpp  throwing_plugin.cpp  unload_throwing_plugin.cpp
spec/: architecture.md  data-model.yaml  lastenheft-historie.md  lastenheft.md  spezifikation-historie.md  spezifikation.md
src/: CMakeLists.txt  main.cpp
src/adapters/: CMakeLists.txt
src/adapters/geometry/: occ_geometry_adapter.cpp  occ_geometry_adapter.h  occ_probe.cpp  occ_probe.h  occ_solids.cpp  occ_solids.h  step_export_adapter.cpp  step_export_adapter.h  stl_export_adapter.cpp  stl_export_adapter.h
src/adapters/io/: dxf_export_adapter.cpp  dxf_export_adapter.h  dxf_import_adapter.cpp  dxf_import_adapter.h  dxf_reader.cpp  dxf_reader.h  dxf_writer.cpp  dxf_writer.h  ifc_export_adapter.cpp  ifc_export_adapter.h  ifc_import_adapter.cpp  ifc_import_adapter.h  ifc_spf_reader.cpp  ifc_spf_reader.h  ifc_spf_writer.cpp  ifc_spf_writer.h  io_atomic_write.cpp  io_atomic_write.h  pdf_export_adapter.cpp  pdf_export_adapter.h  pdf_writer.cpp  pdf_writer.h  plan_geometry.cpp  plan_geometry.h  png_export_adapter.cpp  png_export_adapter.h  png_font.h  png_writer.cpp  png_writer.h
src/adapters/persistence/: schema.sql  schema_sql.h.in  sqlite_probe.cpp  sqlite_probe.h  sqlite_project_repository.cpp  sqlite_project_repository.h
src/adapters/plugin/: plugin_host.cpp  plugin_host.h
src/adapters/ui/: qt_probe.cpp  qt_probe.h  viewer_scene.cpp  viewer_scene.h  viewer_widget.cpp  viewer_widget.h
src/adapters/ui/command/: edit_drawing_guide_line_sink.h  plan_view_plan_source.h  view_model_mesh_source.cpp  view_model_mesh_source.h
src/adapters/ui/view/: canvas_widget.cpp  canvas_widget.h  mesh_source.h  view_transform.h  viewer_scene.cpp  viewer_scene.h  viewer_widget.cpp  viewer_widget.h
src/hexagon/: CMakeLists.txt
src/hexagon/model/: area_report.h  building.h  constants.h  cut_prism.h  derived_geometry.h  export_provenance.h  footprint.h  guide_line.h  layer.h  layer_visibility.h  material.h  material_line.h  mesh_ops.h  opening.h  opening_line.h  persisted_derivations.h  plan_view.h  point2d.h  roof.h  room.h  segment.h  slab.h  solid.h  stair.h  step_box.h  storey.h  storey_query.h  triangle_mesh.h  volume_report.h  wall.h  wall_type.h
src/hexagon/ports/driven/: geometry_kernel_port.h  greeting_source_port.h  model_changed_port.h  model_exporter_port.h  model_importer_port.h  project_repository_port.h
src/hexagon/ports/driving/: detect_rooms_port.h  edit_drawing_port.h  edit_structure_port.h  evaluate_port.h  exchange_model_port.h  greet_port.h  plan_view_port.h  view_model_port.h
src/hexagon/services/: bootstrap_info.cpp  bootstrap_info.h  exchange_service.cpp  exchange_service.h  greeting_service.cpp  greeting_service.h  opening_geometry.cpp  opening_geometry.h  roof_geometry.cpp  roof_geometry.h  room_detection.cpp  room_detection.h  slab_geometry.cpp  slab_geometry.h  stair_geometry.cpp  stair_geometry.h  structure_edit_service.cpp  structure_edit_service.h  volume_geometry.cpp  volume_geometry.h
src/hexagon/services/geometry/: opening_geometry.cpp  plan_projection.cpp  plan_projection.h  roof_geometry.cpp  slab_geometry.cpp  slab_geometry.h  stair_geometry.cpp  stair_geometry.h  wall_footprint.cpp  wall_footprint.h
src/plugin_api/: CMakeLists.txt  plugin.h  plugin_abi.h  plugin_context.h
tests/: CMakeLists.txt
tests/adapters/: golden_gen.cpp  golden_model.cpp  golden_model.h  save_project_test_helper.h  test_canvas_widget.cpp  test_dxf_codec.cpp  test_dxf_export.cpp  test_dxf_import.cpp  test_golden_export.cpp  test_ifc_export.cpp  test_ifc_import.cpp  test_ifc_spf_reader.cpp  test_occ_geometry_adapter.cpp  test_pdf_export.cpp  test_plan_geometry.cpp  test_plugin_host.cpp  test_png_export.cpp  test_probes.cpp  test_sqlite_crash_recovery.cpp  test_sqlite_project_repository.cpp  test_step_stl_export.cpp  test_viewer_scene.cpp  test_viewer_widget.cpp
tests/adapters/golden/: README.md  model.dxf  model.ifc  model.step  model.stl
tests/hexagon/: analytic_geometry_double.h  test_bootstrap_info.cpp  test_derived_geometry.cpp  test_drawing.cpp  test_evaluate.cpp  test_evaluate_lists.cpp  test_evaluate_volume.cpp  test_greeting_service.cpp  test_material.cpp  test_model_change_notification.cpp  test_openings.cpp  test_plan_projection.cpp  test_roof_geometry.cpp  test_room_detection.cpp  test_slab_geometry.cpp  test_stair_geometry.cpp  test_structure_edit_service.cpp  test_wall_footprint.cpp
tools/: Dockerfile  README.md  arch-check.sh  docs-check.js  gate-consistency.sh  idlink.py  io-smoke.sh  suppression-gate.sh
(+186 files in other folders)
